--- a/index.html
+++ b/index.html
@@ -130,6 +130,68 @@
     <!-- Cart Overlay -->
     <div id="cartOverlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
 
+    <!-- Chatbot Floating Icon -->
+    <div id="chatbotIcon" class="fixed bottom-6 right-6 z-50 cursor-pointer chatbot-icon">
+        <div class="chatbot-ripple azure-bot-icon text-white w-16 h-16 rounded-full shadow-lg flex items-center justify-center hover:scale-110 transition-transform duration-300 relative">
+            <!-- Icono profesional del bot de Azure -->
+            <img src="azure-bot-icon.svg" alt="Azure Bot" class="w-10 h-10">
+            <!-- Indicador de estado en línea -->
+            <div class="absolute -top-1 -right-1 w-4 h-4 bg-green-400 rounded-full border-2 border-white status-indicator"></div>
+        </div>
+        <!-- Notification Badge -->
+        <div id="chatNotification" class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full h-6 w-6 flex items-center justify-center animate-bounce hidden">
+            <span>1</span>
+        </div>
+    </div>
+
+    <!-- Chatbot Modal con Azure Bot -->
+    <div id="chatbotModal" class="fixed bottom-24 right-6 w-96 h-[500px] bg-white rounded-lg shadow-2xl z-50 transform scale-0 opacity-0 transition-all duration-300 origin-bottom-right azure-bot-modal">
+        <!-- Chat Header -->
+        <div class="azure-bot-header text-white p-4 rounded-t-lg flex justify-between items-center">
+            <div class="flex items-center space-x-3">
+                <div class="w-10 h-10 bg-white bg-opacity-20 rounded-full flex items-center justify-center">
+                    <img src="azure-bot-icon.svg" alt="Azure Bot" class="w-6 h-6">
+                </div>
+                <div>
+                    <h3 class="font-semibold">Asistente Virtual Azure</h3>
+                    <p class="text-xs opacity-90 flex items-center">
+                        <span class="w-2 h-2 bg-green-400 rounded-full mr-2 status-indicator"></span>
+                        Conectado
+                    </p>
+                </div>
+            </div>
+            <button id="closeChat" class="text-white hover:text-gray-200 transition-colors">
+                <i class="fas fa-times text-lg"></i>
+            </button>
+        </div>
+        
+        <!-- Chat Messages -->
+        <div id="chatMessages" class="h-64 overflow-y-auto p-4 space-y-3">
+            <div class="flex items-start space-x-2 chat-message">
+                <div class="w-8 h-8 bg-primary rounded-full flex items-center justify-center flex-shrink-0">
+                    <i class="fas fa-robot text-white text-xs"></i>
+                </div>
+                <div class="bg-gray-100 rounded-lg p-3 max-w-xs">
+                    <p class="text-sm text-gray-800">¡Hola! Soy tu asistente virtual de Azure. ¿En qué puedo ayudarte hoy con nuestros productos de joyería?</p>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Chat Input -->
+        <div class="p-4 border-t border-gray-200">
+            <div class="flex space-x-2">
+                <input type="text" id="chatInput" placeholder="Escribe tu mensaje..." 
+                       class="flex-1 border border-gray-300 rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent">
+                <button id="sendMessage" class="bg-primary text-white px-4 py-2 rounded-lg hover:bg-purple-700 transition-colors">
+                    <i class="fas fa-paper-plane text-sm"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Chatbot Overlay -->
+    <div id="chatbotOverlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
+
     <!-- Footer -->
     <footer id="contacto" class="bg-gray-800 text-white py-12">
         <div class="container mx-auto px-4">
